fixes map info card alignment, adds heart button

--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -83,13 +83,14 @@
   .map-info {
     width: 80%;
     height: 600px;
-  }
-
-  h5 {
-    font-size: 3rem;
-  }
-  
-  p {
-    font-size: 1.5rem;
+    justify-content: space-around;
+    
+      h5 {
+        font-size: 3rem;
+      }
+      
+      p {
+        font-size: 1.5rem;
+      }
   }
 }
